--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -24,6 +24,7 @@ RUN \
     apt-get update && \
     apt-get dist-upgrade -y && \
     apt-get install -y --force-yes --no-install-recommends \
+        build-essential \
         debhelper \
         dh-virtualenv\
         fakeroot \
