--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ env:
     - LOG_FOLDER='/tmp/shared_service_log'
     - PACKAGE_NAME=${PACKAGE_NAME:-true_nth_usa_portal}
     - IMAGE_NAME=${IMAGE_NAME:-portal_web}
-    - BINTRAY_DEB_REPO=${BINTRAY_DEB_REPO:-true_nth}
-    - BINTRAY_DOCKER_REPO=${BINTRAY_DOCKER_REPO:-portal}
+    - DEB_REPO=${DEB_REPO:-portal-deb}
+    - DOCKER_REPO=${DOCKER_REPO:-portal-docker}
     - BINTRAY_USERNAME=${BINTRAY_USERNAME:-uwcirg}
 
 matrix:
@@ -104,7 +104,7 @@ before_deploy:
       docker login
         --username "$BINTRAY_USERNAME"
         --password "$BINTRAY_API_KEY"
-      "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io" ;
+      "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io" ;
     fi
   - if [[ -v DOCKER_CLOUD_API_KEY ]]; then
       docker login
@@ -134,7 +134,7 @@ deploy:
       curl
         --upload-file artifacts/*.deb
         --user "$GH_USERNAME:$BINTRAY_API_KEY"
-        https://api.bintray.com/content/$GH_USERNAME/$BINTRAY_DEB_REPO/$PACKAGE_NAME/$PORTAL_VERSION/artifacts/;deb_distribution=stable;deb_component=main;deb_architecture=amd64
+        https://api.bintray.com/content/$GH_USERNAME/$DEB_REPO/$PACKAGE_NAME/$PORTAL_VERSION/artifacts/;deb_distribution=stable;deb_component=main;deb_architecture=amd64
 
 after_deploy:
   # Deploy to Bintray, if configured
@@ -142,12 +142,12 @@ after_deploy:
       for tag in $DOCKER_TAGS; do
         docker tag
           "$IMAGE_NAME:$TAG"
-          "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
+          "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
       done
     fi
   - if [[ -v BINTRAY_API_KEY ]]; then
       for tag in $DOCKER_TAGS; do
-        docker push "$GH_USERNAME-docker-$BINTRAY_DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
+        docker push "$GH_USERNAME-docker-$DOCKER_REPO.bintray.io/$IMAGE_NAME:$tag";
       done &
     fi
 
