Replace Apache with gunicorn in Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,31 +6,9 @@ RUN \
     apt-get update && \
     apt-get dist-upgrade --yes && \
     apt-get install --yes --force-yes --no-install-recommends \
-        apache2 \
-        libapache2-mod-wsgi \
         libpq5 \
         python2.7 && \
     apt-get clean
-
-RUN printf '\n\
-Listen 0.0.0.0:${PORT}\n\
-ServerName ${SERVER_NAME}\n\
-ErrorLog /dev/stdout\n\
-<VirtualHost *:${PORT}>\n\
-  LogLevel info\n\
-  ErrorLog /dev/stdout\n\
-  CustomLog /dev/stdout combined\n\
-  WSGIPassAuthorization On\n\
-  WSGIDaemonProcess stg_cs user=${RUN_USER} group=${APACHE_RUN_GROUP} threads=5\n\
-  WSGIScriptAlias / /var/www/portal.wsgi\n\
-  <Directory /var/www/>\n\
-    WSGIProcessGroup stg_cs\n\
-    WSGIApplicationGroup %%{GLOBAL}\n\
-    Require all granted\n\
-  </Directory>\n\
-</VirtualHost>\n\
-\n'\
-> /etc/apache2/sites-available/portal.conf
 
 ARG debian_repo="http://dl.bintray.com/v1/content/uwcirg/truenth"
 
@@ -51,8 +29,6 @@ RUN \
     apt-get clean && \
     rm --force --recursive --verbose /tmp/artifacts
 
-COPY portal.wsgi /var/www/
-
 ENV \
     RUN_USER="${RUN_USER:-www-data}" \
     LOG_FOLDER="/tmp/shared_service_log" \
@@ -61,12 +37,7 @@ ENV \
 
 RUN \
     mkdir -p ${LOG_FOLDER} ${PROJECT_DIR}/var/portal-instance/ && \
-    chown $RUN_USER:$RUN_USER \
-        /var/run/apache2/ \
-        ${LOG_FOLDER} \
-        ${PROJECT_DIR}/var/portal-instance/ && \
-    sed -i 's|Listen [[:digit:]]\+|Listen ${PORT}|g' /etc/apache2/ports.conf && \
-    a2ensite portal && a2dissite 000-default && a2disconf other-vhosts-access-log
+    chown $RUN_USER:$RUN_USER ${LOG_FOLDER} ${PROJECT_DIR}/var/portal-instance/
 
 USER ${RUN_USER}
 
@@ -78,7 +49,6 @@ ENV \
 EXPOSE ${PORT}
 
 CMD \
-    . /etc/apache2/envvars && \
     . ${PROJECT_DIR}/bin/activate && \
     env && \
     if [ -n "$(flask db current)" ]; then \
@@ -86,4 +56,6 @@ CMD \
     else \
         python ${FLASK_APP} initdb; \
     fi && \
-    /usr/sbin/apache2 -D FOREGROUND
+    gunicorn \
+        --bind "0.0.0.0:${PORT}" \
+    manage:app
