Write logging to stdout on TravisCI

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
 
 [testenv]
 deps = -rrequirements.txt
-passenv = TRAVIS* SQLALCHEMY_DATABASE* LOG_FOLDER PERSISTENCE_FILE
+passenv = TRAVIS* SQLALCHEMY_DATABASE* PERSISTENCE_FILE
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
