Use long option

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = True
 
 [base]
 commands =
-    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach -A portal.celery_worker.celery --loglevel=info;fi"
+    bash -c "if [[ -v TRAVIS ]]; then celery worker --detach --app portal.celery_worker.celery --loglevel=info;fi"
 
 [testenv]
 deps = -rrequirements.txt
