--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ fuzzywuzzy==0.15.0
 gunicorn==19.7.1
 imagesize==0.7.1
 ipdb==0.10.3
-ipython==5.3.0
+ipython==5.3.0; python_version <= '2.7' # pyup: <6.0.0 # See uwcirg/true_nth_usa_portal#819
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.10.2
