--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,10 @@ commands =
 changedir = docs
 commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
+[testenv:translations]
+passenv = SMARTLING_* {[testenv]passenv}
+commands = flask translation_upload
+
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
 commands =
