Sync database before building POT file

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}
 
 [testenv:translations]
 passenv = SMARTLING_* {[testenv]passenv}
-commands = flask translation_upload
+commands =
+    flask sync
+    flask translation_upload
 
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
