--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands = sphinx-build -W -n -b html -d {envtmpdir}/doctrees source {envtmpdir}
 passenv = SMARTLING_* {[testenv]passenv}
 commands =
     flask sync
-    flask translation_upload
+    bash -c "if [[ "$TRAVIS_BRANCH" = "develop" ]]; then flask translation_upload ;fi"
 
 [testenv:ui]
 passenv = SAUCE_* {[testenv]passenv}
