Add previously removed unit test job

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
 
 matrix:
   include:
+    - env: TOXENV=py27
     - env: TOXENV=translations PERSISTENCE_FILE="https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json"
     - env: TOXENV=translations PERSISTENCE_FILE="https://raw.githubusercontent.com/uwcirg/ePROMs-site-config/develop/site_persistence_file.json"
     - env: TOXENV=docs
