--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.4
 Flask-OAuthlib==0.9.4
+Flask-ReCaptcha==0.4.2
 Flask-Script==2.0.5
 Flask-Session==0.3.1
 Flask-SQLAlchemy==2.2
