--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,11 @@ coverage==4.4.1
 decorator==4.1.2
 docopt==0.6.2
 docutils==0.13.1
+dogpile.cache==0.6.4
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Celery-Helper==1.1.0
+Flask-Dogpile-Cache==0.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.0
