Add debugging for docker tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,9 @@ after_success:
   # See https://github.com/travis-ci/travis-ci/issues/3149
   - export DOCKER_TAGS="$TAG $SHORT_HASH $TRAVIS_COMMIT $TRAVIS_BUILD_NUMBER"
 
+  # Debugging
+  - echo "$TAG $SHORT_HASH $TRAVIS_COMMIT $TRAVIS_BUILD_NUMBER"
+
   - docker pull "uwcirg-$DOCKER_REPO.jfrog.io/deb_builder:latest"
   - docker volume create --name debian-repo
   # Build artifacts from current repo and branch (else "develop")
