--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,6 +2,8 @@
 version: '2.1'
 services:
   web:
+    env_file:
+      - portal.env
     # Todo: fix tagging of "latest" and "stable" on TravisCI
     image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:e4bef52c7eb0c9e647397808f59afa3a60a8473f"
     build:
@@ -12,7 +14,6 @@ services:
     ports:
       - "${EXTERNAL_PORT:-8080}:${PORT:-8008}"
     environment:
-      - SERVER_NAME=${SERVER_NAME:-localhost}
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
       # compose-specific overrides
       - SQLALCHEMY_DATABASE_URI=${SQLALCHEMY_DATABASE_URI:-postgresql://postgres:@db/postgres}
