--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   web:
     env_file:
       - portal.env
+    entrypoint: '/bin/bash -c "source /opt/venvs/portal/bin/activate && env && flask sync && gunicorn --timeout 90 --keep-alive 75 --bind 0.0.0.0:8008  manage:app"'
     # Todo: fix tagging of "latest" and "stable" on TravisCI
     image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:e4bef52c7eb0c9e647397808f59afa3a60a8473f"
     build:
