--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,8 +2,8 @@
 version: '2.1'
 services:
   web:
-    env_file:
-      - portal.env
+    # Workaround to gunicorn sync workers bug
+    # https://github.com/benoitc/gunicorn/issues/1194
     entrypoint: '/bin/bash -c "source /opt/venvs/portal/bin/activate && env && flask sync && gunicorn --timeout 90 --keep-alive 75 --bind 0.0.0.0:8008  manage:app"'
     # Todo: fix tagging of "latest" and "stable" on TravisCI
     image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:e4bef52c7eb0c9e647397808f59afa3a60a8473f"
@@ -14,6 +14,8 @@ services:
         - debian_repo="${DEBIAN_REPO:-http://dl.bintray.com/v1/content/uwcirg/${BINTRAY_DEB_REPO:-true_nth}}"
     ports:
       - "${EXTERNAL_PORT:-8080}:${PORT:-8008}"
+    env_file:
+      - portal.env
     environment:
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
       # compose-specific overrides
