Pull docker images by default (instead of building)

--- a/docker/docker-compose.build.yaml
+++ b/docker/docker-compose.build.yaml
@@ -1,6 +1,13 @@
 ---
 version: '2.1'
 services:
+  web:
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
+      args:
+        - debian_repo="${DEBIAN_REPO:-http://dl.bintray.com/v1/content/uwcirg/${BINTRAY_DEB_REPO:-true_nth}}"
+
   builder:
     build:
       context: ..
