Pull newest docker image by default

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,8 +5,7 @@ services:
     # Workaround to gunicorn sync workers bug
     # https://github.com/benoitc/gunicorn/issues/1194
     entrypoint: '/bin/bash -c "source /opt/venvs/portal/bin/activate && env && flask sync && gunicorn --timeout 90 --keep-alive 75 --bind 0.0.0.0:8008  manage:app"'
-    # Todo: fix tagging of "latest" and "stable" on TravisCI
-    image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:e4bef52c7eb0c9e647397808f59afa3a60a8473f"
+    image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:latest"
     ports:
       - "${EXTERNAL_PORT:-8080}:${PORT:-8008}"
     env_file:
