--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,4 +53,8 @@ CMD \
     flask sync && \
     gunicorn \
         --bind "0.0.0.0:${PORT}" \
+        `# Workaround to gunicorn sync workers bug` \
+        `# https://github.com/benoitc/gunicorn/issues/1194` \
+        --timeout 90 \
+        --keep-alive 75 \
     manage:app
