--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ env:
   global:
     - FLASK_APP="$(readlink -f manage.py)"
     - SQLALCHEMY_DATABASE_TEST_URI='postgresql://postgres:@localhost/portal_unit_tests'
-    - SQLALCHEMY_DATABASE_URI='postgresql://postgres:@localhost/portal_unit_tests'
+    - PGUSER='postgres'
+    - PGPASSWORD=''
+    - PGHOST='localhost'
+    - PGDATABASE='portal_unit_tests'
     - PACKAGE_NAME=${PACKAGE_NAME:-true_nth_usa_portal}
     - IMAGE_NAME=${IMAGE_NAME:-portal_web}
     - DEB_REPO=${DEB_REPO:-portal-deb}
