--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,7 +10,10 @@ services:
     environment:
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
       # compose-specific overrides
-      - SQLALCHEMY_DATABASE_URI=${SQLALCHEMY_DATABASE_URI:-postgresql://postgres:@db/postgres}
+      - PGUSER=${PGUSER:-postgresql}
+      - PGPASSWORD=${PGPASSWORD:-}
+      - PGHOST=${PGHOST:-db}
+      - PGDATABASE=${PGDATABASE:-postgres}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/0}
       - REQUEST_CACHE_URL=${REQUEST_CACHE_URL:-redis://redis:6379/0}
       - SESSION_REDIS_URL=${SESSION_REDIS_URL:-redis://redis:6379/0}
