Pass postgres env vars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
 
 [testenv]
 deps = -rrequirements.txt
-passenv = TRAVIS* SQLALCHEMY_DATABASE* PERSISTENCE_FILE FLASK_APP
+passenv = TRAVIS* PG* PERSISTENCE_FILE FLASK_APP
 whitelist_externals = /bin/bash
 commands =
     {[base]commands}
