--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     environment:
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
       # compose-specific overrides
-      - PGUSER=${PGUSER:-postgresql}
-      - PGPASSWORD=${PGPASSWORD:-}
+      - PGUSER=${PGUSER:-postgres}
+      - PGPASSWORD=${PGPASSWORD:-''}
       - PGHOST=${PGHOST:-db}
       - PGDATABASE=${PGDATABASE:-postgres}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/0}
