--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:jessie
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV \
+    DEBIAN_FRONTEND="noninteractive"
 
 RUN \
     apt-get update && \
