--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,7 +20,7 @@ RUN \
     if [ -n "$(ls -A /tmp/artifacts)" ]; then \
         echo deb file:/tmp/artifacts ./ > /etc/apt/sources.list.d/truenth.local.list; \
     else \
-        echo deb ${debian_repo} stable main > /etc/apt/sources.list.d/truenth.list; \
+        echo deb "${debian_repo}" stable main > /etc/apt/sources.list.d/truenth.list; \
     fi
 
 RUN \
@@ -35,21 +35,21 @@ ENV \
     PROJECT_DIR="/opt/venvs/portal"
 
 RUN \
-    mkdir --parents ${PROJECT_DIR}/var/portal-instance/ && \
-    chown $RUN_USER:$RUN_USER ${PROJECT_DIR}/var/portal-instance/
+    mkdir --parents "${PROJECT_DIR}/var/portal-instance/" && \
+    chown "$RUN_USER:$RUN_USER" "${PROJECT_DIR}/var/portal-instance/"
 
-USER ${RUN_USER}
+USER "${RUN_USER}"
 
 ENV \
-    SERVER_NAME=${SERVER_NAME:-localhost} \
+    SERVER_NAME="${SERVER_NAME:-localhost}" \
     PORT="${PORT:-8008}" \
     FLASK_APP="${PROJECT_DIR}/bin/manage.py" \
     PERSISTENCE_FILE="${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}"
 
-EXPOSE ${PORT}
+EXPOSE "${PORT}"
 
 CMD \
-    . ${PROJECT_DIR}/bin/activate && \
+    . "${PROJECT_DIR}/bin/activate" && \
     eval $("${PROJECT_DIR}/bin/remap_envvars.py") && \
     env && \
     flask sync && \
