--- a/portal/package.json
+++ b/portal/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "i18next-frontend-changes",
+  "name": "truenth",
   "version": "0.0.1",
-  "description": "incorporating i18next for frontend translation needs",
+  "description": "fills the front-end needs including incorporating i18next for frontend translation needs",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-po": "^0.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "i18next-conv": "^4.0.3",
