--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,5 @@
 ---
-version: '2.1'
+version: "2.1"
 services:
   web:
     image: "uwcirg-portal-docker.jfrog.io/${IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
@@ -11,7 +11,7 @@ services:
       - PERSISTENCE_FILE=${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}
       # compose-specific overrides
       - PGUSER=${PGUSER:-postgres}
-      - PGPASSWORD=${PGPASSWORD:-''}
+      - PGPASSWORD=${PGPASSWORD:-""}
       - PGHOST=${PGHOST:-db}
       - PGDATABASE=${PGDATABASE:-postgres}
       - CELERY_BROKER_URL=${CELERY_BROKER_URL:-redis://redis:6379/0}
