--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,11 +13,11 @@ RUN \
 
 ARG debian_repo="http://dl.bintray.com/v1/content/uwcirg/truenth"
 
-COPY artifacts /tmp/artifacts
+COPY debian/artifacts /tmp/artifacts
 
 # Only add local repository if packages available in artifacts/
 RUN \
-    if [ -n "$(ls -A /tmp/artifacts)" ]; then \
+    if [ -n "$(ls /tmp/artifacts)" ]; then \
         echo deb file:/tmp/artifacts ./ > /etc/apt/sources.list.d/truenth.local.list; \
     else \
         echo deb "${debian_repo}" stable main > /etc/apt/sources.list.d/truenth.list; \
