--- a/docker/docker-compose.build.yaml
+++ b/docker/docker-compose.build.yaml
@@ -16,10 +16,6 @@ services:
       - BRANCH=${BRANCH:-develop}
       - REPO_SLUG=${REPO_SLUG:-uwcirg/true_nth_usa_portal}
     volumes:
-      - debian-repo:
-    volumes:
-      - source: debian-repo
+      - source: ../debian/artifacts
         target: /tmp/artifacts
-        type: volume
-volumes:
-    debian-repo: {}
+        type: bind
