Use docker-compose to build deb packages and docker images

--- a/.travis.yml
+++ b/.travis.yml
@@ -99,23 +99,14 @@ after_success:
   # See https://github.com/travis-ci/travis-ci/issues/3149
   - export DOCKER_TAGS="$TAG $SHORT_HASH $TRAVIS_COMMIT $TRAVIS_BUILD_NUMBER"
 
-  - docker pull "uwcirg-$DOCKER_REPO.jfrog.io/deb_builder:latest"
-  - docker volume create --name debian-repo
-  # Build artifacts from current repo and branch (else "develop")
-  - docker run
-      --volume debian-repo:/tmp/artifacts
-      --env REPO_SLUG=$TRAVIS_REPO_SLUG
-      --env BRANCH=${TRAVIS_BRANCH:-develop}
-    "uwcirg-$DOCKER_REPO.jfrog.io/deb_builder:latest"
+  - export COMPOSE_FILE='docker/docker-compose.build.yaml:docker/docker-compose.yaml'
+  # Build debian package from current repo and branch (else "develop")
+  - REPO_SLUG="$TRAVIS_REPO_SLUG"
+    BRANCH="${TRAVIS_BRANCH:-develop}"
+    docker-compose run builder
 
-  # Copy artifacts off volume mounted on previous container
-  - docker cp $(docker ps --quiet --latest --filter ancestor="uwcirg-$DOCKER_REPO.jfrog.io/deb_builder:latest"):/tmp/artifacts /tmp
-  # Copy artifacts to current directory to allow local installation
-  - cp --recursive --verbose /tmp/artifacts debian/artifacts
-  - docker build
-      --file docker/Dockerfile
-      --tag "$IMAGE_NAME:$TAG"
-    .
+  # Build portal docker image from debian package
+  - docker-compose build web
 
 before_deploy:
   - export DOCKER_CLOUD_USERNAME=${DOCKER_CLOUD_USERNAME:-${GH_USERNAME//-}}
