--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ after_success:
   - export DOCKER_TAGS="$TAG $SHORT_HASH $TRAVIS_COMMIT $TRAVIS_BUILD_NUMBER"
 
   - cp docker/portal.env.default docker/portal.env
-  - export COMPOSE_FILE='docker/docker-compose.build.yaml:docker/docker-compose.yaml'
+  - export COMPOSE_FILE='docker/docker-compose.yaml:docker/docker-compose.build.yaml'
   # Build debian package from current repo and branch (else "develop")
   - REPO_SLUG="$TRAVIS_REPO_SLUG"
     BRANCH="${TRAVIS_BRANCH:-develop}"
