--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -4,8 +4,9 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN \
     apt-get update && \
-    apt-get dist-upgrade -y && \
-    apt-get install -y --force-yes --no-install-recommends \
+    apt-get install --yes --no-install-recommends apt-utils && \
+    apt-get dist-upgrade --yes && \
+    apt-get install --yes --no-install-recommends \
         build-essential \
         debhelper \
         dh-virtualenv\
