compress png files, add missing aria label for input fields for accessibility

--- a/portal/package.json
+++ b/portal/package.json
@@ -9,18 +9,29 @@
   "author": "Amy",
   "license": "BSD",
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "del": "^3.0.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-buffer": "0.0.2",
+    "gulp-clean-css": "^3.8.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-po": "^0.1.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-inline-source": "^3.1.0",
+    "gulp-less": "^3.3.2",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
+    "gulp-wait": "0.0.2",
     "i18next-conv": "^4.0.3",
     "i18next-scanner": "^1.9.4",
+    "less-plugin-clean-css": "^1.5.1",
     "merge2": "^1.1.0",
     "path": "^0.12.7",
+    "postcss-zindex": "^2.2.0",
+    "pump": "^1.0.2",
     "request": "^2.81.0",
     "vinyl-source-stream": "^1.1.0"
   },
