--- a/portal/package.json
+++ b/portal/package.json
@@ -1,42 +1,32 @@
 {
-  "name": "truenth",
-  "version": "0.0.1",
-  "description": "fills the front-end needs including incorporating i18next for frontend translation needs",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  name: "truenth",
+  version: "0.0.1",
+  description: "fills the front-end needs including incorporating i18next for frontend translation needs",
+  main: "main.js",
+  scripts: {
+    test: "echo "Error: no test specified" && exit 1"
   },
-  "author": "Amy",
-  "license": "BSD",
-  "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "del": "^3.0.0",
-    "fs": "0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-buffer": "0.0.2",
-    "gulp-clean-css": "^3.8.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-concat-po": "^0.1.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-inline-source": "^3.1.0",
-    "gulp-less": "^3.3.2",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-wait": "0.0.2",
-    "i18next-conv": "^4.0.3",
-    "i18next-scanner": "^1.9.4",
-    "less-plugin-clean-css": "^1.5.1",
-    "merge2": "^1.1.0",
-    "path": "^0.12.7",
-    "postcss-zindex": "^2.2.0",
-    "pump": "^1.0.2",
-    "request": "^2.81.0",
-    "vinyl-source-stream": "^1.1.0"
+  author: "Amy",
+  license: "BSD",
+  devDependencies: {
+    del: "^3.0.0",
+    fs: "0.0.1-security",
+    gulp: "^3.9.1",
+    gulp-buffer: "0.0.2",
+    gulp-concat: "^2.6.1",
+    gulp-concat-po: "^0.1.1",
+    gulp-rename: "^1.2.2",
+    gulp-uglify: "^3.0.0",
+    i18next-conv: "^4.0.3",
+    i18next-scanner: "^1.9.4",
+    merge2: "^1.1.0",
+    path: "^0.12.7",
+    request: "^2.81.0",
+    vinyl-source-stream: "^1.1.0"
   },
-  "dependencies": {
-    "fs": "0.0.1-security",
-    "path": "^0.12.7"
-  }
+  dependencies: {
+    fs: "0.0.1-security",
+    path: "^0.12.7"
+  } 
 }
+  
