portal stylesheet cleanup, removing unused classes, selectors, refactor medial queries

--- a/portal/package.json
+++ b/portal/package.json
@@ -15,10 +15,13 @@
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-concat-po": "^0.1.1",
+    "gulp-less": "^3.3.2",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "i18next-conv": "^4.0.3",
     "i18next-scanner": "^1.9.4",
+    "less-plugin-clean-css": "^1.5.1",
     "merge2": "^1.1.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
