--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - PGUSER=${PGUSER:-postgres}
       - PGPASSWORD=${PGPASSWORD:-""}
       - PGHOST=${PGHOST:-db}
-      - PGDATABASE=${PGDATABASE:-postgres}
+      - PGDATABASE=${PGDATABASE:-portaldb}
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
     depends_on:
       - db
