Mount config directory into container

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,6 +17,10 @@ services:
       - PGHOST=${PGHOST:-db}
       - PGDATABASE=${PGDATABASE:-portaldb}
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+    volumes:
+      - source: ../instance
+        target: "${PROJECT_DIR:-/opt/venvs/portal}/var/portal-instance/"
+        type: bind
     depends_on:
       - db
       - redis
