Add celerybeat service

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - db
       - redis
       - celery
+      - celerybeat
   celery:
     image: "${REPO:-uwcirg-portal-docker.jfrog.io/}${IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
     command: bash -c '
@@ -29,6 +30,21 @@ services:
       eval $$("${PROJECT_DIR:-/opt/venvs/portal}/bin/remap_envvars.py") &&
       env &&
       celery worker --app portal.celery_worker.celery --loglevel=info'
+    environment:
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+    volumes:
+      - source: ../instance
+        target: "${PROJECT_DIR:-/opt/venvs/portal}/var/portal-instance/"
+        type: bind
+    depends_on:
+      - redis
+  celerybeat:
+    image: "${REPO:-uwcirg-portal-docker.jfrog.io/}${IMAGE_NAME:-portal_web}:${IMAGE_TAG:-latest}"
+    command: bash -c '
+      . "${PROJECT_DIR:-/opt/venvs/portal}/bin/activate" &&
+      eval $$("${PROJECT_DIR:-/opt/venvs/portal}/bin/remap_envvars.py") &&
+      env &&
+      celery worker --app portal.celery_worker.celery --beat --schedule=/tmp/celerybeat-schedule --loglevel=info'
     environment:
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
     volumes:
