Rename WSGI function to match standard: "application"

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -75,4 +75,4 @@ CMD \
         `# https://github.com/benoitc/gunicorn/issues/1194` \
         --timeout 90 \
         --keep-alive 75 \
-    wsgi:app
+    wsgi:application
