Add virtual environment to PATH instead of activating

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -52,12 +52,12 @@ ENV \
     SERVER_NAME="${SERVER_NAME:-localhost}" \
     PORT="${PORT:-8008}" \
     FLASK_APP="${PROJECT_DIR}/bin/manage.py" \
+    PATH="${PROJECT_DIR}/bin:${PATH}" \
     PERSISTENCE_FILE="${PERSISTENCE_FILE:-https://raw.githubusercontent.com/uwcirg/TrueNTH-USA-site-config/develop/site_persistence_file.json}"
 
 EXPOSE "${PORT}"
 
 CMD \
-    . "${PROJECT_DIR}/bin/activate" && \
     eval $("${PROJECT_DIR}/bin/remap_envvars.py") && \
     env && \
 
