--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -19,22 +19,28 @@ RUN \
         python-pip && \
     apt-get clean
 
-RUN pip install --upgrade pip setuptools && pip install wheel && pip install make-deb
-
-RUN mkdir --parents /tmp/artifacts
-
 # Allow repo and branch to be overridden with environmental variable
 ENV \
     GIT_REPO="${GIT_REPO:-https://github.com/uwcirg/true_nth_usa_portal}" \
-    BRANCH="${BRANCH:-develop}"
+    BRANCH="${BRANCH:-develop}" \
+    ARTIFACT_DIR="${ARTIFACT_DIR:-/tmp/artifacts}"
+
+RUN \
+    pip install --upgrade pip setuptools && \
+    pip install wheel && \
+    pip install make-deb && \
+    mkdir --parents "${ARTIFACT_DIR}"
+
+WORKDIR /root/portal
 
 CMD \
-    git clone --verbose --branch "${BRANCH}" "${GIT_REPO}" /root/portal && \
-    cd /root/portal && \
+    git clone --verbose --branch "${BRANCH}" "${GIT_REPO}" . && \
     yes | make-deb && \
     git checkout debian/rules && \
+
     dpkg-buildpackage --unsigned-source --unsigned-changes && \
-    mv /root/portal_* /tmp/artifacts && \
-    cd /tmp/artifacts && \
-    dpkg-scanpackages . | gzip > /tmp/artifacts/Packages.gz && \
-    chown --verbose nobody:nogroup /tmp/artifacts/*
+    mv /root/portal_* "${ARTIFACT_DIR}" && \
+
+    cd "${ARTIFACT_DIR}" && \
+    dpkg-scanpackages . | gzip > "${ARTIFACT_DIR}/Packages.gz" && \
+    chown --verbose nobody:nogroup "${ARTIFACT_DIR}/"*
