--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:stretch
 
 ENV \
+    ARTIFACT_DIR="${ARTIFACT_DIR:-/tmp/artifacts}" \
     DEBIAN_FRONTEND="noninteractive"
 
 RUN \
@@ -15,12 +16,12 @@ RUN \
 
 ARG debian_repo="https://uwcirg.jfrog.io/uwcirg/portal-deb"
 
-COPY debian/artifacts /tmp/artifacts
+COPY debian/artifacts "${ARTIFACT_DIR}"
 
 # Only add local repository if packages available in artifacts/
 RUN \
-    if [ -n "$(ls /tmp/artifacts)" ]; then \
-        echo deb file:/tmp/artifacts ./ > /etc/apt/sources.list.d/truenth.local.list; \
+    if [ -n "$(ls ${ARTIFACT_DIR})" ]; then \
+        echo "deb file:${ARTIFACT_DIR}" ./ > /etc/apt/sources.list.d/truenth.local.list; \
     else \
         echo deb "${debian_repo}" stable main > /etc/apt/sources.list.d/truenth.list; \
     fi
@@ -29,7 +30,7 @@ RUN \
     apt-get update && \
     apt-get install --yes --allow-unauthenticated portal && \
     apt-get clean && \
-    rm --force --recursive --verbose /tmp/artifacts
+    rm --force --recursive --verbose "${ARTIFACT_DIR}"
 
 ENV \
     RUN_USER="${RUN_USER:-www-data}" \
